--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
-
-* {
+.card,
+aside,
+main {
     box-sizing: border-box;
 }
 
@@ -34,18 +34,18 @@ nav a:hover {
 }
 
 footer {
-    padding: 20px;
-    color: white;
     background-color: #00a2c6;
-    text-align: center;
+    color: white;
     font-weight: bold;
+    padding: 20px;
+    text-align: center;
 }
 
 .featured-image {
-    width: 100%;
     max-height: 300px;
     object-fit: cover;
     object-position: center;
+    width: 100%;
 }
 
 .profile img {
@@ -53,28 +53,34 @@ footer {
 }
 
 main {
-    padding: 20px;
     overflow: auto;
+    padding: 20px;
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
     border-radius: 5px;
-    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
     margin-top: 20px;
+    padding: 20px;
 }
 
 .jumbotron {
+    background-color: #00c8eb;
+    color: white;
     font-size: 20px;
     padding: 60px;
-    background-color: #00c8eb;
     text-align: center;
-    color: white;
+}
+
+header {
+    display: inline;
 }
 
 nav {
-    padding: 5px;
     background-color: #00a2c6;
+    padding: 5px;
+    position: sticky;
+    top: 0;
 }
 
 nav li {
@@ -84,10 +90,10 @@ nav li {
 }
 
 nav li a {
+    color: white;
     font-size: 18px;
     font-weight: 400;
     text-decoration: none;
-    color: white;
 }
 
 #content {
@@ -97,6 +103,21 @@ nav li a {
 
 aside {
     float: right;
-    width: 25%;
     padding-left: 20px;
+    width: 25%;
 }
+
+/* media query implementation */
+
+/* tablet size media query */
+@media screen and (max-width: 1000px) {
+
+    #content,
+    aside {
+        padding: 0;
+        width: 100%;
+    }
+}
+
+/* phone size media query */
+@media screen and (max-width: 600px) {}
